# doc-chat

./: .env.example  .gitignore  cleanup-plan.md  cleanup.md  docker-compose.ocr-mineru.yml  docker-compose.yml  readme.md
backend/: Dockerfile  app.py  chunking.py  config.py  dependencies.py  embeddings.py  persistence.py  pyproject.toml  tokenizer_registry.py
backend/routes/: agentic.py  documents.py  system.py
backend/services/: gpu_phases.py  rag.py  warmup.py
backend/services/agentic/: __init__.py  history_store.py  modes.py  orchestrator.py  prompts.py  tools.py
backend/services/ingestion/: __init__.py  api.py  pipeline.py  worker.py
diagnostics/: app.py
docker/: llama-cpp.Dockerfile  llm_controller.py
docs/: agentic_flow.md  docker-compose.md  migration.md  qwen3-ocr-plan.md  test_prompts.md
docs/architecture/: database_tables.md
frontend/: nginx.conf  package.json
frontend/src/: App.jsx  ChatPage.jsx  IngestPage.jsx
frontend/src/components/: DocumentViewer.jsx
llama-cpp/: Dockerfile  llm_controller.py  multimodal_server.py
ocr_mineru/: app.py  mineru.env
ocr_module/: app.py  mineru.env  mineru_wrapper.py
ocr_qwen3_module/: Dockerfile  app.py  pdf_render.py  pyproject.toml  qwen3.env  qwen_vl_runtime.py
ocr_qwen3vl/: Dockerfile  app.py  qwen3.env  qwen_vl_runtime.py
